fixes styling of scrollbar that was taking up space in the margin of the smallest mobile size

--- a/src/login/styles/_Emails.scss
+++ b/src/login/styles/_Emails.scss
@@ -1,5 +1,5 @@
 .help-text {
-  margin-top: 0px;
+  margin-top: 1rem;
   margin-bottom: -5px;
   line-height: 1.2;
   color: #7c7c7c;
