--- a/src/login/styles/_tables.scss
+++ b/src/login/styles/_tables.scss
@@ -1,12 +1,12 @@
 /* styles for tables displaying userinfo on settings page */
 table {
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   width: 100%;
   // background-color: white;
   color: gray;
   font-size: 24px;
   font-family: "ProximaNova-Light";
-  margin: 1rem 0;
+  // margin: 1rem 0;
   // border-collapse: collapse;
 }
 
